# simple-image-viewer

./: .gitignore  CMakeLists.txt  LINKS.md  README.md  image-viewer.c
src/: image-viewer.c  jpeg.c  png.c  utils.c
src/include/: jpeg.h  png.h  utils.h
